# opengl-particle-system

./: .gitignore  CMakeLists.txt  README.md
shaders/particle/: draw.frag  draw.vert  emit.comp  scan1.comp
src/: main.cpp
src/camera/: camera.cpp  camera.hpp
src/glh/: program.cpp  program.hpp  resource.cpp  resource.hpp
src/particles/: particle_system.cpp  particle_system.hpp
src/window/: window.cpp  window.hpp
